tests/fixtures/invalid/float_dict.py
# Cannot call float() with Dict[str, int]
x = float({"a": 1})
